fixed icons for lightdm-gtk-greeter.

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ xubuntu-artwork (12.04.4) UNRELEASED; urgency=low
   * lib/plymouth/xubuntu-logo: fixed color mismatch.
   * usr/share/icons/elementary-xfce*:
     - add missing mimetypes and symbolic icons.
+    - fixed icons for lightdm-gtk-greeter.
     - use the correct names for dropbox status icons. lp: #955434
     - add missing symlinks for parole (lp: #954004) and xfdesktop-menu
       (lp: #937684).
