--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ xubuntu-artwork (12.04.4) UNRELEASED; urgency=low
     - use the correct names for dropbox status icons. lp: #955434
     - add missing symlinks for parole (lp: #954004) and xfdesktop-menu
       (lp: #937684).
+  * Use the new Xubuntu logo. lp: #955396
 
  -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Sat, 17 Mar 2012 17:15:07 +0100
 
