--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-xubuntu-artwork (12.04.4) UNRELEASED; urgency=low
+xubuntu-artwork (12.04.4) precise; urgency=low
 
   * lib/plymouth/xubuntu-logo: fixed color mismatch.
   * usr/share/icons/elementary-xfce*:
@@ -9,7 +9,7 @@ xubuntu-artwork (12.04.4) UNRELEASED; urgency=low
       (lp: #937684).
   * Use the new Xubuntu logo. lp: #955396
 
- -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Sat, 17 Mar 2012 17:15:07 +0100
+ -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Sun, 18 Mar 2012 13:38:05 +0100
 
 xubuntu-artwork (12.04.3) precise; urgency=low
 
