--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xubuntu-artwork (12.04.5) UNRELEASED; urgency=low
+
+  * Really add the new logo for lightdm gtk greeter… (lp #955396 again)
+
+ -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Mon, 19 Mar 2012 23:31:44 +0100
+
 xubuntu-artwork (12.04.4) precise; urgency=low
 
   * lib/plymouth/xubuntu-logo: fixed color mismatch.
