--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xubuntu-artwork (12.04.8) UNRELEASED; urgency=low
+
+  * Fix Plymouth script; messages on multiple lines instead of one.
+
+ -- Pasi Lallinaho <pasi@shimmerproject.org>  Thu, 22 Mar 2012 21:21:40 +0100
+
 xubuntu-artwork (12.04.7) precise; urgency=low
 
   * Drop spurious 'untitled folder' from elementary-xfce icon theme, it makes
