--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+xubuntu-artwork (12.04.9) UNRELEASED; urgency=low
+
+  * usr/share/icons/elementary-xfce:
+    - add symbolic redo- and undo-icons. lp: #963262
+    - fix inconsistent style of video-mime.
+    - provide 64px pngs for many common apps to prevent xfwm4 tabwin to
+      upscale 48px icons that will look blurry.
+
+ -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Sat, 31 Mar 2012 15:22:18 +0200
+
 xubuntu-artwork (12.04.8) precise; urgency=low
 
   * Fix Plymouth script; messages on multiple lines instead of one. lp: #961546
