--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-xubuntu-artwork (12.04.9) UNRELEASED; urgency=low
+xubuntu-artwork (12.04.9) precise; urgency=low
 
   * usr/share/icons/elementary-xfce:
     - add symbolic redo- and undo-icons. lp: #963262
@@ -6,7 +6,7 @@ xubuntu-artwork (12.04.9) UNRELEASED; urgency=low
     - provide 64px pngs for many common apps to prevent xfwm4 tabwin to
       upscale 48px icons that will look blurry.
 
- -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Sat, 31 Mar 2012 15:22:18 +0200
+ -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Sun, 01 Apr 2012 12:55:11 +0200
 
 xubuntu-artwork (12.04.8) precise; urgency=low
 
