--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+xubuntu-artwork (12.04.10) UNRELEASED; urgency=low
+
+  * usr/share/icons/elementary-xfce:
+    - drop superflous 'temp' folder.
+    - provide more 64px pngs for the tabwin.
+  * usr/share/icons/elementary-xfce-dark:
+    - add missing light panel icon for xfce4-clipman.
+
+ -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Wed, 04 Apr 2012 20:35:22 +0200
+
 xubuntu-artwork (12.04.9) precise; urgency=low
 
   * usr/share/icons/elementary-xfce:
