--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ xubuntu-artwork (12.10.1) UNRELEASED; urgency=low
   * Include new wallpaper. lp: #1043170
   * Import elementary-xfce master to fix missing icons. lp: #1006416
   * usr/share/lightdm-gtk-greeter: dropped, unneeded now.
+  * usr/share/pixmaps/xubuntu-lightdm-computer.png: added, for use by
+    lightdm-gtk-greeter. lp: #1043176
 
  -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Wed, 29 Aug 2012 18:52:22 +0200
 
