--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,7 @@
 xubuntu-artwork (12.10.2) UNRELEASED; urgency=low
 
   * Drop more old wallpapers to gain space, and provide a symlink for use
-    by ubiquity-dm.
+    by ubiquity-dm. lp: #1043170
 
  -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Sat, 15 Sep 2012 15:32:52 +0200
 
