--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,8 @@
 xubuntu-artwork (12.10.2) UNRELEASED; urgency=low
 
-  * Drop more old wallpapers to gain space, and provide a symlink for use
-    by ubiquity-dm. lp: #1043170
+  * Drop more old wallpapers to gain space, provide a symlink for use by
+    ubiquity-dm, and include a dotless version of the wp for lightdm and
+    plymouth. lp: #1043170
 
  -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Sat, 15 Sep 2012 15:32:52 +0200
 
