--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,11 @@
 xubuntu-artwork (13.04.0) UNRELEASED; urgency=low
 
-  * Include updated plymouth theme.
-  * Include updated elementary-xfce-* icon themes, converted to png, and
-    add a rule to regenerate it easily from the svg files.
+  * Include updated plymouth theme. lp: #830464
+  * Include updated elementary-xfce-* icon themes, including:
+    - fix identical synaptic and usc icons lp: #1043506
+    - fix 32px php mime icon lp: #1060226
+    - convert the themes to png and add a rule to regenerate them easily
+      from the svg files. lp: #1005785
 
  -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Thu, 24 Jan 2013 16:38:08 +0100
 
