--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xubuntu-artwork (13.04.1) UNRELEASED; urgency=low
+
+  * lib/plymouth/themes/xubuntu-text/xubuntu-text.plymouth: bump version.
+
+ -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Tue, 29 Jan 2013 21:09:01 +0100
+
 xubuntu-artwork (13.04.0) raring; urgency=low
 
   * Include updated plymouth theme. lp: #830464
