--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,11 @@
 xubuntu-artwork (13.04.1) UNRELEASED; urgency=low
 
+  [ Lionel Le Folgoc ]
   * lib/plymouth/themes/xubuntu-text/xubuntu-text.plymouth: bump version.
+
+  [ Simon Steinbeiß ]
+  * Add 30px of vertical padding between logo and spinner, reduce spinner speed
+    to a less nervous level
 
  -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Tue, 29 Jan 2013 21:09:01 +0100
 
