during fsck and password entry stage because they would overlap. * Fetch latest bugfixes for elementary-xfce-* icon themes from git:   - add missing symlinks for xfce4-power-manager and network-manager     notifications.   - add missing 16px icon for onboard.   - small fix for the accessibility symbolic icon.

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,7 +2,14 @@ xubuntu-artwork (13.04.3) UNRELEASED; urgency=low
 
   [ Simon Steinbeiß ]
   * lib/plymouth/themes/xubuntu-logo/xubuntu-logo.script: hide the spinner
-    during fsck and password entry stage ebcause they would overlap.
+    during fsck and password entry stage because they would overlap.
+
+  [ Lionel Le Folgoc ]
+  * Fetch latest bugfixes for elementary-xfce-* icon themes from git:
+    - add missing symlinks for xfce4-power-manager and network-manager
+      notifications.
+    - add missing 16px icon for onboard.
+    - small fix for the accessibility symbolic icon.
 
  -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Sat, 09 Mar 2013 21:19:06 +0100
 
