--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+xubuntu-artwork (13.04.4) UNRELEASED; urgency=low
+
+  * Fetch latest bugfixes for elementary-xfce-* icon themes from git:
+    - add missing preferences-desktop-locale-symbolic icon.
+
+ -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Wed, 20 Mar 2013 21:35:53 +0100
+
 xubuntu-artwork (13.04.3) raring; urgency=low
 
   [ Simon Steinbeiß ]
