--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,9 @@ xubuntu-artwork (13.04.4) UNRELEASED; urgency=low
 
   * Fetch latest bugfixes for elementary-xfce-* icon themes from git:
     - add missing preferences-desktop-locale-symbolic icon.
+  * usr/share/xfce4/backdrops/xubuntu-raring.png: added, new wallpaper.
+    Update the symlink to let xubuntu-default-settings/ubiquity/etc. use
+    it by default.
 
  -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Wed, 20 Mar 2013 21:35:53 +0100
 
