--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,9 @@ xubuntu-artwork (13.04.5) raring; urgency=low
   [ Pasi Lallinaho ]
 
   * Last minute wallpaper change
+  * LP Bug #1168339
 
- -- Stephen Michael Kellat <skellat@ubuntu.com>  Fri, 12 Apr 2013 08:50:46 -0400
+ -- Stephen Michael Kellat <skellat@Fearless.local>  Fri, 12 Apr 2013 09:07:22 -0400
 
 xubuntu-artwork (13.04.4) UNRELEASED; urgency=low
 
