Refresh icon themes from git.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xubuntu-artwork (13.10.1) UNRELEASED; urgency=low
+
+  * Refresh icon themes from git.
+
+ -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Sun, 07 Jul 2013 10:07:50 +0200
+
 xubuntu-artwork (13.10.0) saucy; urgency=low
 
   * Improve Plymouth's positioning and scaling when using multiple monitors by
