--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,9 @@ xubuntu-artwork (14.04.0) trusty; urgency=low
 
   * Update icon-theme from github
   * Bump version in plymouth-theme to 14.04
+  * Fix messages in graphical plymouth-theme
 
- -- Simon Steinbeiss <ochosi@shimmerproject.org>  Fri, 14 Feb 2014 00:10:17 +0200
+ -- Simon Steinbeiss <ochosi@shimmerproject.org>  Tue, 18 Feb 2014 15:24:17 +0200
 
 xubuntu-artwork (13.10.3) saucy; urgency=low
 
