Use DEP-5 copyright format

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ xubuntu-artwork (14.04.0) trusty; urgency=low
   * debian/control:
     - Bump standards-version to 3.9.5 (no changes)
     - Use debhelper 9
+  * Use DEP-5 copyright format
 
  -- Simon Steinbeiss <ochosi@shimmerproject.org>  Tue, 18 Feb 2014 15:24:17 +0200
 
