--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+xubuntu-artwork (14.04.1) trusty; urgency=low
+
+  * Update icon-theme from github
+  * Repack tarball (LP: #1290390)
+
+ -- Simon Steinbeiss <ochosi@shimmerproject.org>  Tue, 11 Mar 2014 20:41:34 +0200
+
 xubuntu-artwork (14.04.0) trusty; urgency=low
 
   * Update icon-theme from github
