--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+xubuntu-artwork (14.10.0) utopic; urgency=medium
+
+  [ Unit 193 ]
+  * Bump version in plymouth-theme to 14.10
+
+ -- Unit 193 <unit193@ubuntu.com>  Thu, 31 Jul 2014 15:56:02 -0400
+
 xubuntu-artwork (14.04.2) trusty; urgency=low
 
   * Add new wallpaper for Trusty (LP #1298711)
