--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xubuntu-artwork (14.10.1) utopic; urgency=medium
+
+  * Update icon-theme from github for Beta1
+
+ -- Simon Steinbeiss <ochosi@shimmerproject.org>  Sun, 24 Aug 2014 23:14:02 +0200
+
 xubuntu-artwork (14.10.0) utopic; urgency=medium
 
   [ Unit 193 ]
