--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,13 @@
 xubuntu-artwork (14.10.2) utopic; urgency=medium
 
+  [ Simon Steinbeiß ]
   * Another small update for our icon-theme
 
- -- Simon Steinbeiß <ochosi@shimmerproject.org>  Wed, 10 Sep 2014 18:15:40 +0200
+  [ Sean Davis ]
+  * debian/copyright
+    - Clean up warnings, obsolete paths
+
+ -- Sean Davis <smd.seandavis@gmail.com>  Wed, 10 Sep 2014 22:00:42 -0400
 
 xubuntu-artwork (14.10.1) utopic; urgency=medium
 
