New wallpaper for Utopic

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xubuntu-artwork (14.10.3) utopic; urgency=medium
+
+  * Add new wallpaper for Utopic (LP: #1371555)
+
+ -- Sean Davis <smd.seandavis@gmail.com>  Mon, 22 Sep 2014 07:07:22 -0400
+
 xubuntu-artwork (14.10.2) utopic; urgency=medium
 
   [ Simon Steinbeiß ]
