--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 xubuntu-artwork (15.04.1) vivid; urgency=medium
 
+  * Update icon theme from git snapshot (2015-02-13)
   * usr/share/xfce4/backdrops/xubuntu-development.png
   * debian/xubuntu-wallpapers.links
     - New development wallpaper
@@ -7,7 +8,7 @@ xubuntu-artwork (15.04.1) vivid; urgency=medium
     - Move Recommends to Depends
     - Bump Standards-Version to 3.9.6
 
- -- Sean Davis <smd.seandavis@gmail.com>  Wed, 11 Feb 2015 20:29:35 -0500
+ -- Sean Davis <smd.seandavis@gmail.com>  Fri, 13 Feb 2015 23:16:06 -0500
 
 xubuntu-artwork (15.04.0) vivid; urgency=medium
 
