--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,13 @@ xubuntu-artwork (15.04.4) UNRELEASED; urgency=medium
   * usr/share/gtksourceview-{2.0|3.0}/*, usr/share/xfce4/terminal/*
   * debian/xubuntu-artwork.install:
     - Add xubuntu-{dark|light} terminal and gtksourceview colorschemes
+  * usr/share/xfce4/backdrops/xubuntu-{quantal|raring|saucy}.png
+    - Dropped, only including wallpapers between LTS releases
+  * usr/share/xfce4/backdrops/xubuntu-vivid.png
+  * lib/plymouth/themes/xubuntu-logo/wallpaper.png
+    - New wallpaper for Xubuntu 15.04
 
- -- Sean Davis <smd.seandavis@gmail.com>  Tue, 10 Mar 2015 06:33:33 -0400
+ -- Sean Davis <smd.seandavis@gmail.com>  Tue, 10 Mar 2015 19:29:03 -0400
 
 xubuntu-artwork (15.04.3) vivid; urgency=medium
 
