Link to dev wallpaper, release 15.10.0

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,13 @@
-xubuntu-artwork (15.10.0) UNRELEASED; urgency=medium
+xubuntu-artwork (15.10.0) wily; urgency=medium
 
   [ Unit 193 ]
   * Bump plymouth-text version number for wily
 
- -- Unit 193 <unit193@ubuntu.com>  Mon, 04 May 2015 18:39:34 -0400
+  [ Sean Davis ]
+  * debian/xubuntu-wallpapers.links
+    - Link to development wallpaper
+
+ -- Sean Davis <smd.seandavis@gmail.com>  Thu, 28 May 2015 22:55:41 -0400
 
 xubuntu-artwork (15.04.4) vivid; urgency=medium
 
