--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+xubuntu-artwork (15.10.2) UNRELEASED; urgency=medium
+
+  * debian/control:
+    - Add Provides: libreoffice-style for
+      libreoffice-style-elementary package
+
+ -- Sean Davis <smd.seandavis@gmail.com>  Thu, 06 Aug 2015 22:43:08 -0400
+
 xubuntu-artwork (15.10.1) wily; urgency=medium
 
   * Makefile
