--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xubuntu-artwork (15.10.3) wily; urgency=medium
+
+  * Update libreoffice-style-elementary to 0.2
+
+ -- Sean Davis <smd.seandavis@gmail.com>  Thu, 20 Aug 2015 18:41:17 -0400
+
 xubuntu-artwork (15.10.2) wily; urgency=medium
 
   * debian/control:
