--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+xubuntu-artwork (15.12.1) UNRELEASED; urgency=medium
+
+  * Transition with new plymouth from /usr/share to /lib:
+    - replace /lib instances by /usr/share
+    - move lib/plymouth to usr/share/plymouth
+    - breaks against older plymouth.
+    - ensure we can transition the alternatives to the new version
+
+ -- Didier Roche <didrocks@ubuntu.com>  Tue, 08 Dec 2015 09:07:29 +0100
+
 xubuntu-artwork (15.10.5) wily; urgency=medium
 
   * usr/share/icons/*
