releasing package xubuntu-artwork version 15.12.1

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-xubuntu-artwork (15.12.1) UNRELEASED; urgency=medium
+xubuntu-artwork (15.12.1) xenial; urgency=medium
 
   * Transition with new plymouth from /usr/share to /lib:
     - replace /lib instances by /usr/share
@@ -6,7 +6,7 @@ xubuntu-artwork (15.12.1) UNRELEASED; urgency=medium
     - breaks against older plymouth.
     - ensure we can transition the alternatives to the new version
 
- -- Didier Roche <didrocks@ubuntu.com>  Tue, 08 Dec 2015 09:07:29 +0100
+ -- Didier Roche <didrocks@ubuntu.com>  Wed, 09 Dec 2015 08:38:24 +0100
 
 xubuntu-artwork (15.10.5) wily; urgency=medium
 
