--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xubuntu-artwork (17.04) UNRELEASED; urgency=medium
+
+  * Update wallpaper (desktop and Plymouth)
+
+ -- Pasi Lallinaho <pasi@shimmerproject.org>  Tue, 07 Mar 2017 00:17:42 +0200
+
 xubuntu-artwork (16.10.1) yakkety; urgency=medium
 
   [ Pasi Lallinaho ]
