--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xubuntu-artwork (17.10.1) UNRELEASED; urgency=medium
+
+  * Update desktop and Plymouth wallpapers
+
+ -- Pasi Lallinaho <pasi@shimmerproject.org>  Wed, 13 Sep 2017 14:16:41 +0300
+
 xubuntu-artwork (17.10) artful; urgency=medium
 
   * usr/share/plymouth/themes/xubuntu-text/xubuntu-text.plymouth:
