* debian/xubuntu-wallpapers.links:   - Link to development wallpaper * usr/share/plymouth/themes/xubuntu-text/xubuntu-text.plymouth   - Bump plymouth-text version number for bionic

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+xubuntu-artwork (18.04) UNRELEASED; urgency=medium
+
+  * debian/xubuntu-wallpapers.links:
+    - Link to development wallpaper
+  * usr/share/plymouth/themes/xubuntu-text/xubuntu-text.plymouth
+    - Bump plymouth-text version number for bionic
+
+ -- Sean Davis <smd.seandavis@gmail.com>  Tue, 24 Oct 2017 22:09:52 -0400
+
 xubuntu-artwork (17.10.1) artful; urgency=medium
 
   [ Pasi Lallinaho ]
