--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,25 @@
+xubuntu-artwork (18.04.1) UNRELEASED; urgency=medium
+
+  * Update elementary-xfce to v0.10
+  * debian/changelog:
+    - Strip trailing whitespace (file-contains-trailing-whitespace)
+  * debian/compat:
+    - Bumped debhelper to 11
+  * debian/control:
+    - Bumped debhelper to 11
+    - Bumped Standards version to 4.1.3
+    - Strip trailing whitespace (file-contains-trailing-whitespace)
+  * debian/copyright:
+    - Switched to secure copyright format uri
+  * debian/plymouth-theme-xubuntu-logo.{prerm,postrm}
+  * debian/plymouth-theme-xubuntu-text.{prerm,postrm}
+    - Moved from postrm to prerm to resolve
+      maintainer-script-should-not-use-update-alternatives-remove
+  * debian/xubuntu-icon-theme.links:
+    - Added, brands elementary-xfce with the xubuntu logo
+
+ -- Sean Davis <smd.seandavis@gmail.com>  Sat, 03 Feb 2018 08:34:18 -0500
+
 xubuntu-artwork (18.04) bionic; urgency=medium
 
   * debian/xubuntu-wallpapers.links:
@@ -883,7 +905,7 @@ xubuntu-artwork (0.37) karmic; urgency=low
   * debian/control:
    - xubuntu-gdm-theme: recommend 'xsplash' instead of 'xplash' (LP: #444957)
 
- -- Cody A.W. Somerville <cody-somerville@ubuntu.com>  Tue, 06 Oct 2009 21:38:13 -0300 
+ -- Cody A.W. Somerville <cody-somerville@ubuntu.com>  Tue, 06 Oct 2009 21:38:13 -0300
 
 xubuntu-artwork (0.36) karmic; urgency=low
 
@@ -904,7 +926,7 @@ xubuntu-artwork (0.36) karmic; urgency=low
 xubuntu-artwork (0.35) karmic; urgency=low
 
   [ Steve Dodier ]
-  * usr/share/themes/Albatross: 
+  * usr/share/themes/Albatross:
     - added theming for icons background in xfdesktop.
     - added new Albatross xfwm4 theme.
   * usr/share/icons/elementaryXubuntu: removed notification icons and fixed symlinks.
@@ -1009,17 +1031,17 @@ xubuntu-artwork (0.26) jaunty; urgency=low
   * Replace the XDMCP-login button with Options -menu button.
   * /usr/share/gdm/themes/xubuntu/mist.png: Moved to gdm_svg/
   * Updated the xubuntu-jaunty.svg to refer to local mist.png to fix png export.
-  
+
   [Cody A.W. Somerville]
   * Updated gdm_svg/* to allow for Pasi's changes to build correctly and be
     more tidy:
-   - Moved icons in gdm_svg into icons subdirectory and background related 
+   - Moved icons in gdm_svg into icons subdirectory and background related
      images into background subdirectory.
    - Created gdm_svg/icons/Makefile and gdm_svg/background/Makefile using bits
      and pieces of gdm_svg/Makefile.
    - Stripped gdm_svg/Makefile to simply call respective subdirectory Makefiles.
   * debian/control: Removed XSBC-Original-Maintainer field.
-   
+
  -- Cody A.W. Somerville <cody-somerville@ubuntu.com>  Wed, 08 Apr 2009 21:25:55 -0300
 
 xubuntu-artwork (0.25) jaunty; urgency=high
@@ -1106,7 +1128,7 @@ xubuntu-artwork (0.18) gutsy; urgency=low
 
 xubuntu-artwork (0.17) gutsy; urgency=low
 
-  * usplash/Makefile: add -fPIC which got lost in the previous upload (fixes 
+  * usplash/Makefile: add -fPIC which got lost in the previous upload (fixes
     FTBFS on amd64).
 
  -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Fri, 31 Aug 2007 21:29:05 +0200
@@ -1157,7 +1179,7 @@ xubuntu-artwork (0.12) feisty; urgency=low
 
 xubuntu-artwork (0.11) edgy; urgency=low
 
-  * New usplash artwork from Jozsef Mak 
+  * New usplash artwork from Jozsef Mak
 
  -- Jani Monoses <jani@ubuntu.com>  Tue, 26 Sep 2006 07:55:12 +0300
 
@@ -1184,19 +1206,19 @@ xubuntu-artwork (0.8) dapper; urgency=low
 
 xubuntu-artwork (0.7) dapper; urgency=low
 
-  * New usplash more in line with Ubuntu's from Michiel Sikma 
+  * New usplash more in line with Ubuntu's from Michiel Sikma
 
  -- Jani Monoses <jani@ubuntu.com>  Tue, 23 May 2006 12:46:56 +0300
 
 xubuntu-artwork (0.6) dapper; urgency=low
 
-  * Fix color palette in usplash image to not use red text (Daniele Favara) 
+  * Fix color palette in usplash image to not use red text (Daniele Favara)
 
  -- Jani Monoses <jani@ubuntu.com>  Wed, 26 Apr 2006 11:26:29 +0300
 
 xubuntu-artwork (0.5) dapper; urgency=low
 
-  * New usplash by Jozsef Mak 
+  * New usplash by Jozsef Mak
 
  -- Jani Monoses <jani@ubuntu.com>  Mon, 24 Apr 2006 00:09:38 +0300
 
@@ -1210,7 +1232,7 @@ xubuntu-artwork (0.4) dapper; urgency=low
 xubuntu-artwork (0.3) breezy; urgency=low
 
   * Change copyright to Creative Commons as the ubuntu artwork
-    this is derived from 
+    this is derived from
 
  -- Jani Monoses <jani@ubuntu.com>  Mon, 10 Oct 2005 13:31:52 +0300
 
@@ -1218,7 +1240,7 @@ xubuntu-artwork (0.2) breezy; urgency=low
 
   * Add new usplash resembling those in {edu,k,}ubuntu.
     Artwork done by Steve <radarsat1@gmail.com> and Jozsef Mak <joz_mak@yahoo.ca>
-    
+
  -- Jani Monoses <jani@ubuntu.com>  Fri,  7 Oct 2005 15:28:17 +0300
 
 xubuntu-artwork (0.1) breezy; urgency=low
