--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-xubuntu-artwork (18.04.3) UNRELEASED; urgency=medium
+xubuntu-artwork (18.04.3) bionic; urgency=medium
 
   * Update elementary-xfce to v0.11
 
- -- Sean Davis <smd.seandavis@gmail.com>  Wed, 21 Mar 2018 20:10:52 -0400
+ -- Sean Davis <smd.seandavis@gmail.com>  Wed, 21 Mar 2018 20:15:01 -0400
 
 xubuntu-artwork (18.04.2) bionic; urgency=medium
 
