--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+xubuntu-artwork (18.04.4) UNRELEASED; urgency=medium
+
+  * d/rules, d/xubuntu-icon-theme.{postinst,postrm}:
+    - Generate icon theme cache for all included icon themes
+
+ -- Sean Davis <smd.seandavis@gmail.com>  Wed, 21 Mar 2018 21:24:00 -0400
+
 xubuntu-artwork (18.04.3) bionic; urgency=medium
 
   * Update elementary-xfce to v0.11
@@ -1262,4 +1269,3 @@ xubuntu-artwork (0.1) breezy; urgency=low
   * Initial release, includes usplash image
 
  -- Jani Monoses <jani@ubuntu.com>  Sun,  2 Oct 2005 17:08:24 +0300
-
